--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Leopoldo R. Montesinos M.</title>
+    <style>
+        a{
+            color:black;
+        }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -37,7 +42,7 @@
                             <strong>
                                 Mail:
                             </strong> 
-                            <a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro&#64;gmail.com</a>
+                            <a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro@gmail.com</a>
                         </li>
                         <li>
                             <strong>
@@ -55,7 +60,7 @@
                             <strong>
                                     github:
                             </strong> 
-                            <a href="https://github.com/dibiro" target='_blanck'>Github</a>
+                            <a href="https://github.com/dibiro" target='_blanck'>github.com/dibiro</a>
                         </li>
                     </ul>
                 </div>
