update profile photo

--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,7 @@
                     <div class="author_wrap">
                         <div class="leftbox">
                             <div class="image_wrap">
-                                <img src="img/about/22.jpeg" alt="" />
+                                <img src="img/about/22.jpg" alt="" />
                             </div>
                         </div>
                         <div class="rightbox">
