--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row" style="margin-top:30px;">
             <div class="col-12 col-md-3">
-                <img src="img/about/22.jpeg" class="img-fluid" style="margin-top:45px;" alt="" />
+                <img src="img/about/22.jpg" class="img-fluid" style="margin-top:45px;" alt="" />
             </div>
             <div class="col-12 col-md-9">
                 <div class="wesley_tm_main_title_holder about">
