--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -206,6 +206,9 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="col-12 col-md-12">
+                        <p>This company focused on outsourcing, was responsible for creating web solutions and mobile applications, in the web section it was on React.js and Sap UI5 libraries and create api rest with python / django and sap HANA XS.</p>
+                    </div>
                 </div>
             </div>
             <hr class="col-11">
@@ -238,6 +241,9 @@
                                 Deploy Digital Ocean (linux server)
                             </li>
                         </ul>
+                    </div>
+                    <div class="col-12 col-md-12">
+                        <p>In this project I was in charge of the whole backend with django and part of the frontend with react native, I was also in charge of integrating the push notification with firebase, all the application's authentication and how the data flow was treated within the application. Was impregnated redux, redux saga, react native element, react navigation</p>
                     </div>
                 </div>
             </div>
@@ -275,6 +281,32 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="col-12 col-md-12">
+                        <p>In this project I was in charge of the whole backend with django and all of the frontend with react native, How the data flow was treated within the application. Was impregnated redux, redux saga, react native Base, react native router</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin-top:30px;">
+            <div class="col-12 col-md-12">
+                <h3 class="text-info">Education</h3>
+            </div>
+            <hr class="col-11">
+            <div class="col-12 col-md-12">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <h5>Universidad Naciona Experimental Romulo Gallegos</h5>
+                        <p class="text-secondary">
+                            01/2012 - 06/20217
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <ul>
+                            <li>
+                                Informatics Engineering, (9 out of 10 semesters)
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -307,7 +339,7 @@
                 </div>
             </div>
             <hr class="col-11">
-            <div class="col-12 col-md-12">
+            <div class="col-12 col-md-12 bg-light">
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <h5>Diana Builes Morales</h5>
