--- a/cv.html
+++ b/cv.html
@@ -191,7 +191,22 @@
                                 <div class="wesley_tm_progress_wrap" data-size="small" data-round="c" data-strip="off">
                                     <div class="wesley_tm_progress" data-value="95" data-color="#000">
                                         <span class="label">
+                                            - React.js, Redux, GraphQL  
+                                        </span>
+                                    </div>
+                                    <div class="wesley_tm_progress" data-value="95" data-color="#000">
+                                        <span class="label">
                                             - Python/Django Backend Deleveloper  
+                                        </span>
+                                    </div>
+                                    <div class="wesley_tm_progress" data-value="70" data-color="#000">
+                                        <span class="label">
+                                            - Jenkins, Docker  
+                                        </span>
+                                    </div>
+                                    <div class="wesley_tm_progress" data-value="70" data-color="#000">
+                                        <span class="label">
+                                            - DevOps Azure  
                                         </span>
                                     </div>
                                     <div class="wesley_tm_progress" data-value="85" data-color="#000">
