--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -52,15 +52,21 @@
                         </li>
                         <li>
                             <strong>
-                                linkedin:
+                                Linkedin:
                             </strong> 
                             <a href="https://linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i>linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121</a>
                         </li>
                         <li>
                             <strong>
-                                    github:
+                                GitHub:
                             </strong> 
                             <a href="https://github.com/dibiro" target='_blanck'>github.com/dibiro</a>
+                        </li>
+                        <li>
+                            <strong>
+                                Skype:
+                            </strong> 
+                            leopoldo.montesinos1
                         </li>
                     </ul>
                 </div>
@@ -71,6 +77,22 @@
                 <h3 class="text-info">Skill</h3>
             </div>
             <hr class="col-11">
+            <div class="col-12 col-md-6">
+                <h6>
+                    Docker
+                </h6>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <h6>
+                    DevOps Azure
+                </h6>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="75" aria-valuemax="100">75%</div>
+                </div>
+            </div>
             <div class="col-12 col-md-6">
                 <h6>
                     Django
@@ -151,6 +173,14 @@
                     <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="30" aria-valuemax="100">30%</div>
                 </div>
             </div>
+            <div class="col-12 col-md-6">
+                <h6>
+                    Ios
+                </h6>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="30" aria-valuemax="100">30%</div>
+                </div>
+            </div>
         </div>
         <div class="row" style="margin-top:30px;">
             <div class="col-12 col-md-12">
@@ -190,7 +220,16 @@
                     <div class="col-12 col-md-6">
                         <ul>
                             <li>
+                                React.js, Redux, GraphQL  
+                            </li>
+                            <li>
                                 Python/Django Backend Deleveloper  
+                            </li>
+                            <li>
+                                Jenkins, Docker  
+                            </li>
+                            <li>
+                                DevOps Azure  
                             </li>
                             <li>
                                 SAP UI5 
@@ -207,7 +246,7 @@
                         </ul>
                     </div>
                     <div class="col-12 col-md-12">
-                        <p>This company focused on outsourcing, was responsible for creating web solutions and mobile applications, in the web section it was on React.js and Sap UI5 libraries and create api rest with python / django and sap HANA XS.</p>
+                        <p>This company focused on outsourcing, was responsible for creating web solutions and mobile applications, in the web section it was on React.js and Sap UI5 libraries and create api rest with python / django and sap HANA XS. It has also worked with Microsoft Cloud "Azure", Azure DevOps, Git, Pipeline ...</p>
                     </div>
                 </div>
             </div>
