--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -13,6 +13,9 @@
         a{
             color:black;
         }
+        a:hover{
+            color:black;
+        }
     </style>
   </head>
   <body>
